# crucible

./: .gitignore  CRUCIBLE.md  LICENSE  Makefile  README.md  compose.yml  crucible.py  pyproject.toml
.github/workflows/: replay.yml
docker/: Dockerfile
docs/: architecture.md
fixtures/benign/: application.jsonl  authentication.jsonl  endpoint.jsonl  network.jsonl
rules/: admin_endpoint.yml  authentication_failure.yml  crucible-after-hours-access.yml  crucible-bulk-patient-access.yml  crucible-c2-beacon.yml  crucible-credential-dump.yml  crucible-data-staging.yml  crucible-dns-tunnel.yml  crucible-lateral-move.yml  crucible-new-service.yml  crucible-phi-export.yml  crucible-phishing-login.yml  crucible-ransom-trigger.yml  crucible-sensitive-access.yml  crucible-suspicious-enum.yml  simulated_shell.yml
scenarios/: credential-access.json  data-exfiltration.json  hipaa-insider-threat.json  lateral-movement.json  ransomware-kill-chain.json
src/dtm/: __init__.py  attacker.py  cli.py  clock.py  gui.py  io.py  metrics.py  normalize.py  pipeline.py  report.py  scenario.py  sigma.py  victim.py
tests/: test_pipeline.py  test_sigma.py
