[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "detection-time-machine"
version = "0.1.0"
description = "A reproducible cyber range for recording and replaying normalized security telemetry."
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
dtm = "dtm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

